Add config power management

--- a/config/totem.conf
+++ b/config/totem.conf
@@ -1,3 +1,7 @@
-# enable zmk studio for realtime keymap updates
-CONFIG_ZMK_STUDIO=y
-CONFIG_ZMK_STUDIO_LOCKING=n
+# Power management config
+## Milliseconds of inactivity before entering idle state (3 min = 3*60*1000ms)
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=180000
+## Enable deep sleep support
+CONFIG_ZMK_SLEEP=y
+## Milliseconds of inactivity before entering deep sleep (30 min = 30*60*1000ms)
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
